[package]
name = "boj-toolkit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4.38"
colored = "2.1.0"
console = "0.15.8"
indicatif = "0.17.8"
dialoguer = "0.11.0"
